# bbq-controller

./: .gitignore  .travis.yml  Astyle.sh  LICENSE  README.md  code.astylerc  idea.md  platformio.ini  upload.sh
icons/: .gitignore  base.h  bbqlidclosed.xbm  bbqlidopen.xbm  convert.sh  fan24.xbm  fan48.xbm  knob.xbm  knob24.xbm  knob48.xbm  logo.xbm  mqtt.xbm  thermometer.xbm  thermometer24.xbm  thermometer48.xbm  wifi.xbm
images/: bbqlidclosed.xbm  bbqlidopen.xbm  convert.sh  fan.xbm  knob.xbm  logo.xbm  mqtt.xbm  thermometer.xbm  wifi10x10.png.xbm
lib/bbq/: NTCSensor.cpp  NTCSensor.h  analogin.cpp  analogin.h  bbq.h  bbqfanonly copy._cpp  bbqfanonly copy._h  bbqfanonly.cpp  bbqfanonly.h  demo.h  digitalinput.h  digitalknob.cpp  digitalknob.h  max31855sensor.cpp  max31855sensor.h  max31865sensor.cpp  max31865sensor.h  numericinput.h  numericknob.cpp  numericknob.h  onoffventilator.cpp  onoffventilator.h  pwmventilator.cpp  pwmventilator.h  stefanspwmgenerator.cpp  stefanspwmventilator.h  temperaturesensor.h  ventilator.h
lib/eeprom/: crc16.h  crceeprom.h
lib/fonts/: 14segm.h
lib/settings/: settings.cpp  settings.h
lib/statemachine/: statemachine.cpp  statemachine.h
lib/utils/: makestring.cpp  makestring.h  propertyutils.cpp  propertyutils.h  utils.cpp  utils.h
libtest/: Arduino.h  CMakeLists.txt  main.cpp
libtest/catch2/: catch.hpp
libtest/src/: arduinostubs.hpp  mocks.hpp  test_analogin.hpp  test_controller.hpp  test_digitalknob.hpp  test_ntcsensor.hpp  test_numericknob.hpp  test_onoffventilator.hpp  test_properties.hpp  test_pwmventilator.hpp  test_utils.hpp
libtest/stubs/: Stream.h
src/: TTGO_T_DisplayController.cpp  TTGO_T_DisplayController.h  config.h  debug.h  displayController.h  displaycontroller.cpp  displaycontroller.h  icons.h  main copy 2.cpp_  main copy.cpp_  main copy_sprite.cpp_  main.cpp  pwm.c  rotaryencoder.h  rotaryknob.cpp  rotaryknob.h  settingsdto.h  setup_example.h  ssd1306displaycontroller.cpp  ssd1306displaycontroller.h  upload.sh
support/: nodered-blynk.json
